typecheck/tests/micro/good/call_args.c
//call a function with some arguments

void apple(int i, int j)
{
return;
}

void main(void)
{
	int x;
	int y;
	apple(x, y);
return;
}
