typecheck/tests/micro/bad/argument_wrong_num2.c
void orange(int x)
{return;}

void main(void)
{
	int i;
	int j;
	orange(i, j);
return;
}
